# xfmr-zem

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml  pr_agent.yaml  pypi-publish.yml
data/: dup_cleaned.parquet  dup_data.parquet  dup_data_large.parquet  nemo_real_result.parquet
docs/: REDIS_INCREMENTAL_DEDUP_PLAN.md
src/data_pipeline_framework/: __init__.py  cli.py
src/data_pipeline_framework/configs/domains/: finance.yaml  medical.yaml
src/data_pipeline_framework/pipelines/: __init__.py  domain_pipeline_factory.py  legal_pipeline.py  text_pipeline.py
src/data_pipeline_framework/processors/: __init__.py  datajuicer_processor.py  nemo_processor.py
src/data_pipeline_framework/utils/: __init__.py  quality_metrics.py
src/xfmr_zem/: __init__.py  cli.py  client.py  core.py  server.py  zenml_wrapper.py
src/xfmr_zem/configs/: base_config.yaml
src/xfmr_zem/configs/domains/: legal.yaml
src/xfmr_zem/orchestrators/: parallel_local.py
src/xfmr_zem/pipelines/: __init__.py  domain_pipeline_factory.py  legal_pipeline.py  text_pipeline.py
src/xfmr_zem/processors/: __init__.py  datajuicer_processor.py  nemo_processor.py
src/xfmr_zem/utils/: __init__.py  config_loader.py
tests/manual/: data_juicer_config.yaml  data_juicer_override_test.yaml  debug_stdio.py  dummy_config.yaml  dummy_server.py  legal_dedup_2stage_pipeline.yaml  nemo_config.yaml  nemo_gpu_demo.yaml  nemo_real_dedup_demo.yaml  nemo_real_demo.yaml  run_data_juicer.py  run_nemo.py  run_test.py  viet_ocr_test.yaml
website/: index.html
(+14 files in other folders)
