[project]
name = "data-pipeline-framework"
version = "0.1.0"
description = "Unified Data Pipeline Framework combining ZenML, NemoCurator, and DataJuicer"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Khai Hoang", email = "khaihq@vbiacademy.edu.vn"}
]
keywords = ["data-pipeline", "zenml", "nemo-curator", "data-juicer", "mlops"]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
zenml = [
    "zenml>=0.75.0",
]
nemo = [
    "nemo-curator>=0.6.0",
]
datajuicer = [
    "py-data-juicer>=1.0.0",
]
all = [
    "zenml>=0.75.0",
    "nemo-curator>=0.6.0",
    "py-data-juicer>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
dpf = "data_pipeline_framework.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_pipeline_framework"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
